# kLLaMa-jvm

./: LICENSE.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/: App.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
buildSrc/src/main/kotlin/pro/atabakov/: CmakeBuildNativePlugin.kt  CmakeExtension.kt  CmakeSetJNIPlugin.kt
cpp-library/: CMakeLists.txt  build.gradle.kts
cpp-library/src/main/cpp/: native-lib.cpp
examples/kotlin-jvm-app/: build.gradle.kts
examples/kotlin-jvm-app/src/main/kotlin/: App.kt
examples/kotlin-jvm-app/src/main/kotlin/pro/atabakov/: App.kt
gradle/: libs.versions.toml
jvm-app/: build.gradle.kts
jvm-app/src/main/kotlin/: App.kt
jvm-app/src/main/kotlin/pro/tabakov/inference/: InferenceAdapter.kt  InferenceAdapterMethods.kt  InferenceFactory.kt  KLLaMa.kt
kLLaMa/: build.gradle.kts
kLLaMa/src/main/kotlin/pro/tabakov/inference/: InferenceAdapterMethods.kt
kLLaMa/src/main/kotlin/pro/tabakov/kllama/: InferenceAdapter.kt  InferenceAdapterMethods.kt  InferenceFactory.kt  KLLaMa.kt
llama-library/: CMakeLists.txt
llama-library/src/main/cpp/: inference-adapter.cpp
llama-library/src/main/cpp/inference/: inference.cpp  inference.h  string-utils.h
utils/src/main/kotlin/: Utilities.kt
utils/src/test/kotlin/: UtilitiesTest.kt
